--- a/project/package.json
+++ b/project/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "axios": "^0.24.0",
     "miragejs": "^0.1.43",
     "next": "12.0.4",
@@ -17,7 +18,7 @@
   },
   "devDependencies": {
     "@types/node": "16.11.11",
-    "@types/react": "17.0.37",
+    "@types/react": "^17.0.37",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
